Fixed navigation history.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ p.theend {
 <p>&quot;It’s me,&quot; you replied, wondering who was asking, &quot;who?&quot;</p>
 <p>Then a bunch of owls poked their heads out of the tree. You spent the day there and learned many of the owls’ secrets.</p>
 <ul>
-	<li><a href="#2" onclick="state('1', '2');">Next</a>.</li>
+	<li><a href="#2" >Next</a>.</li>
 </ul>
 
 </div><div id="2">
@@ -40,8 +40,8 @@ p.theend {
 <p>&quot;We can ask the owls some questions. They’re very wise.&quot;</p>
 <p>&quot;You decide,&quot; Sally answers. &quot;You’ve been here before.&quot;</p>
 <ul>
-	<li><a href="#4" onclick="state('2', '4');">Wait and follow an owl to a magic kingdom</a>.</li>
-	<li><a href="#8" onclick="state('2', '8');">Ask the owls questions</a>.</li>
+	<li><a href="#4" >Wait and follow an owl to a magic kingdom</a>.</li>
+	<li><a href="#8" >Ask the owls questions</a>.</li>
 </ul>
 
 </div><div id="4">
@@ -49,7 +49,7 @@ p.theend {
 <p>Suddenly a barn owl leaves with a flap of wings.</p>
 <p>&quot;One’s leaving, &quot; you shout, &quot;Let’s go.&quot;</p>
 <ul>
-	<li><a href="#7" onclick="state('4', '7');">Next</a>.</li>
+	<li><a href="#7" >Next</a>.</li>
 </ul>
 
 </div><div id="7">
@@ -57,9 +57,9 @@ p.theend {
 <p>Suddenly you come to a wide river. You look up, but the owl is gone! To the right of the river is a well-used trail. On your left stands a high stone wall. It looks old and crumbly.</p>
 <p>&quot;Drat!&quot; you say to Sally. &quot;Which way should we go?&quot;</p>
 <ul>
-	<li><a href="#11" onclick="state('7', '11');">Follow the trail</a>.</li>
-	<li><a href="#14" onclick="state('7', '14');">Climb over the wall</a>.</li>
-	<li><a href="#21" onclick="state('7', '21');">Cross the river</a>.</li>
+	<li><a href="#11" >Follow the trail</a>.</li>
+	<li><a href="#14" >Climb over the wall</a>.</li>
+	<li><a href="#21" >Cross the river</a>.</li>
 </ul>
 
 </div><div id="8">
@@ -68,8 +68,8 @@ p.theend {
 <p>&quot;Forget it, owl,&quot; Sally says. &quot;I have enough commands to obey. My big brother bosses me around all the time!&quot;</p>
 <p>You don’t know what to do. Who knows what this owl will command? Maybe you can get one of the other owls to answer your question.</p>
 <ul>
-	<li><a href="#12" onclick="state('8', '12');">Ask the saw-whet owl what he wants you to do</a>.</li>
-	<li><a href="#16" onclick="state('8', '16');">Ask a different owl about your future</a>.</li>
+	<li><a href="#12" >Ask the saw-whet owl what he wants you to do</a>.</li>
+	<li><a href="#16" >Ask a different owl about your future</a>.</li>
 </ul>
 
 </div><div id="11">
@@ -79,8 +79,8 @@ p.theend {
 <p>You and Sally follow as best you can on the ground.</p>
 <p>Finally the owl makes a left by an oak tree, and you round the corner after him. You don’t see the owl anywhere, but hanging from a oak tree is a plump leather sack.</p>
 <ul>
-	<li><a href="#33" onclick="state('11', '33');">Look in the sack</a>.</li>
-<li><a href="#40" onclick="state('11', '40');">Keep looking for the owl</a>.</li>
+	<li><a href="#33" >Look in the sack</a>.</li>
+<li><a href="#40" >Keep looking for the owl</a>.</li>
 </ul>
 
 </div><div id="12">
@@ -90,16 +90,16 @@ p.theend {
 <p>&quot;It’s the home of the Great Zoonies. They are large and very mean creatures. They guard the raspberry bushes.&quot;</p>
 <p>&quot;That sounds dangerous!&quot; Sally snaps. Then she turns to you. &quot;I’m not going anywhere. Are you going to Illnoor?&quot;</p>
 <ul>
-	<li><a href="#19" onclick="state('12', '19');">Travel alone to Illnoor</a>.</li>
-<li><a href="#25" onclick="state('12', '25');">Tell the owl you won’t go</a>.</li>
+	<li><a href="#19" >Travel alone to Illnoor</a>.</li>
+<li><a href="#25" >Tell the owl you won’t go</a>.</li>
 </ul>
 
 </div><div id="14">
 <p>You and Sally each grab hold of a sturdy stone in the wall to pull yourselves up. You manage to climb about three feet from the bottom. But when you look up, you see that the top of the wall isn’t getting any closer. Then it hits you: as you climb it, this old stone wall is growing!</p>
 <p>&quot;I don’t think we’re getting anywhere,&quot; Sally shouts. &quot;What do you think we should do?&quot;</p>
 <ul>
-	<li><a href="#24" onclick="state('14', '24');">Say, &quot;Let’s jump off this wall.&quot;</a></li>
-<li><a href="#28" onclick="state('14', '28');">Say, &quot;Let’s keep trying to climb this old wall.&quot;</a></li>
+	<li><a href="#24" >Say, &quot;Let’s jump off this wall.&quot;</a></li>
+<li><a href="#28" >Say, &quot;Let’s keep trying to climb this old wall.&quot;</a></li>
 </ul>
 
 </div><div id="16">
@@ -108,14 +108,14 @@ p.theend {
 <p>&quot;Just wait one minute, my friend! I’m just as wise &mdash; or wiser! I’ll prove it too. Ask me another question.&quot;</p>
 <p>You can’t decide. Should you ask the horned owl what you will be when you grow up, or as both of them a new question?</p>
 <ul>
-	<li><a href="#20" onclick="state('16', '20');">Ask the horned owl the same question</a>.</li>
-<li><a href="#23" onclick="state('16', '23');">Ask both owls a new question</a>.</li>
+	<li><a href="#20" >Ask the horned owl the same question</a>.</li>
+<li><a href="#23" >Ask both owls a new question</a>.</li>
 </ul>
 
 </div><div id="19">
 <p>It doesn’t take long to get to Illnoor. Froma distance you can see the Great Zoonies and they look harmless. They’re furry creatures shaped like caterpillars &mdash; only bigger.</p>
 <ul>
-	<li><a href="#42" onclick="state('19', '42');">Next</a>.</li>
+	<li><a href="#42" >Next</a>.</li>
 </ul>
 
 </div><div id="20">
@@ -130,7 +130,7 @@ p.theend {
 <p>&quot;Let’s borrow the boat,&quot; you say.</p>
 <p>&quot;Maybe we shouldn’t. It’s not ours,&quot; Sally says.</p>
 <ul>
-	<li><a href="#22" onclick="state('21', '22');">Next</a>.</li>
+	<li><a href="#22" >Next</a>.</li>
 </ul>
 
 </div><div id="22">
@@ -138,7 +138,7 @@ p.theend {
 <p>The two of you push the boat into the river and jump aboard. You begin to row across. But the river is flowing very fast and the boat gets caught in it swift current.</p>
 <p>&quot;Help, Sally! I can’t control the boat!&quot; you yell.</p>
 <ul>
-	<li><a href="#27" onclick="state('22', '27');">Next</a>.</li>
+	<li><a href="#27" >Next</a>.</li>
 </ul>
 
 </div><div id="23">
@@ -146,7 +146,7 @@ p.theend {
 <p>&quot;Oh wise and great owls, what will happen to the world?&quot;</p>
 <p>There is silence. You can hear yourself breathe and the tree’s leaves gently rubbing together.</p>
 <ul>
-	<li><a href="#37" onclick="state('23', '37');">Next</a>.</li>
+	<li><a href="#37" >Next</a>.</li>
 </ul>
 
 </div><div id="24">
@@ -160,7 +160,7 @@ p.theend {
 <p>Finally the owl winks at you and Sally. The he says, &quot;I was just testing you. You’ve responded wisely to my request. So, now I’ll tell you what the future holds. Ready?&quot;</p>
 <p>You yell, &quot;Ready!&quot; The owl shifts his feathers.</p>
 <ul>
-	<li><a href="#43" onclick="state('25', '43');">Next</a>.</li>
+	<li><a href="#43" >Next</a>.</li>
 </ul>
 
 </div><div id="27">
@@ -180,7 +180,7 @@ p.theend {
 <p>When you look down over the wall, you see a castle surrounded by an old-fashioned town. Tiny people are running around busily. Some are adding bricks to a fort outside the castle. Others are hooking up horses to carts.</p>
 <p>&quot;It’s the Kingdom of Gollop,&quot; says a calm voice beside you.</p>
 <ul>
-	<li><a href="#31" onclick="state('28', '31');">Next</a>.</li>
+	<li><a href="#31" >Next</a>.</li>
 </ul>
 
 </div><div id="31">
@@ -189,7 +189,7 @@ p.theend {
 <p>But before you ask the owl more about Gollop and the Evil Fotons, the wall shrinks to its normal size and the kingdom disappears.</p>
 <p>The owl is gone.</p>
 <ul>
-	<li><a href="#39" onclick="state('31', '39');">Next</a>.</li>
+	<li><a href="#39" >Next</a>.</li>
 </ul>
 
 </div><div id="33">
@@ -199,7 +199,7 @@ p.theend {
 <p>The sack, branch, and you fall to the ground!</p>
 <p>You’re not hurt, but the sack is. A strange light spills from the tear and spreads on the ground like a puddle of water.</p>
 <ul>
-	<li><a href="#35" onclick="state('33', '35');">Next</a>.</li>
+	<li><a href="#35" >Next</a>.</li>
 </ul>
 
 </div><div id="35">
@@ -221,7 +221,7 @@ p.theend {
 <p>&quot;I guess we’re not going to see a magic kingdom today,&quot; you say to Sally as you jump down from the wall. &quot;Let’s head back to the owl tree and see if we can get the owls to answer some questions.&quot;</p>
 <p>When you get back to the tree several owls are sitting in its branches.</p>
 <ul>
-	<li><a href="#8" onclick="state('39', '8');">Next</a>.</li>
+	<li><a href="#8" >Next</a>.</li>
 </ul>
 
 </div><div id="40">
@@ -230,8 +230,8 @@ p.theend {
 <p>You hike about half a mile, but there’s still no sign of the owl. You lean against a tree and close your eyes. You rest for a few minutes. But suddenly you hear some leaves rustle, and then another noise &mdash; like footsteps.</p>
 <p>Who’s coming? You wonder nervously. It may be Sally catching up to you. On the other hand it could be something dangerous &mdash; like a bear looking for dinner!</p>
 <ul>
-	<li><a href="#44" onclick="state('40', '44');">Break into a run</a>.</li>
-<li><a href="#45" onclick="state('40', '45');">Stay where you are</a>.</li>
+	<li><a href="#44" >Break into a run</a>.</li>
+<li><a href="#45" >Stay where you are</a>.</li>
 </ul>
 
 </div><div id="42">
@@ -252,7 +252,7 @@ p.theend {
 <p>Sally reaches for the sack. But before she can grab it, it shakes loose from the branch. Suddenly it has wings&hellip; the sack is a horned owl!</p>
 <p>The owl circles overhead and then rests on a branch. &quot;Why have you entered my forest?&quot; he demands.</p>
 <ul>
-	<li><a href="#47" onclick="state('44', '47');">Next</a>.</li>
+	<li><a href="#47" >Next</a>.</li>
 </ul>
 
 </div><div id="45">
@@ -261,7 +261,7 @@ p.theend {
 <p>&quot;Boy am I glad to see you,&quot; you say.</p>
 <p>&quot;Never mind that,&quot; she says. &quot;Look what I found in the sack.&quot; She puts something heavy into your hand.</p>
 <ul>
-	<li><a href="#46" onclick="state('45', '46');">Next</a>.</li>
+	<li><a href="#46" >Next</a>.</li>
 </ul>
 
 </div><div id="46">
@@ -278,12 +278,18 @@ p.theend {
 <p class="theend">The End</p>
 </div>
 	<script>
+var cstate = { location: window.location.hash };
+var node = function (state) { return 1 < state.location.length ? state.location.substring(1) : '1'; }
 var display = function(id, v) { document.getElementById(id).style.display = v; }
 var show = function (id) { display(id, 'block'); }
 var hide = function (id) { display(id, 'none'); }
-var state = function(fr, to) { hide(fr); show(to); }
-var hash = function () { return 1 < window.location.hash.length ? window.location.hash.substring(1) : '1'; }
-show(hash());
+var navigated = function () {
+  hide(node(cstate));
+  cstate = { location: window.location.hash };
+  show(node(cstate));
+}
+window.addEventListener('hashchange', navigated, false);
+navigated();
 	</script>
   </body>
 </html>
