Title and graph.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ p.theend {
   </head>
   <body>
 
+  	<h1>R. A. Montgomery, Owl Tree, 1986</h1>
 <div id="1">
 <p>The day you discovered the owl tree was magical. You were hiking in the forest near your house when you stumbled into a large clearing. In the center of it stood a maple tree. Its trunk was so thick that four kids linking hands would barely circle it!</p>
 <p>As you stood under the tree looking up, you were surprised by several questions.</p>
@@ -277,6 +278,9 @@ p.theend {
 <p>&quot;Let’s go home,&quot; you say to Sally. &quot;Whooo knows what this mean old owl will do!&quot;</p>
 <p class="theend">The End</p>
 </div>
+
+<a href="graph.png">Graph</a>
+
 	<script>
 var cstate = { location: window.location.hash };
 var node = function (state) { return 1 < state.location.length ? state.location.substring(1) : '1'; }
