Tabular view of state machine typo fixes

--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@ p.theend {
 <p>You look up at a horned owl. &quot;Oh, horned owl, you look wiser than the little saw-whet owl. Can you tell me what I’ll be when I grow up?&quot;</p>
 <p>The horned owl clears his throat. He’s about to answer you when the saw-whet owl speaks up.</p>
 <p>&quot;Just wait one minute, my friend! I’m just as wise &mdash; or wiser! I’ll prove it too. Ask me another question.&quot;</p>
-<p>You can’t decide. Should you ask the horned owl what you will be when you grow up, or as both of them a new question?</p>
+<p>You can’t decide. Should you ask the horned owl what you will be when you grow up, or ask both of them a new question?</p>
 <ul>
 	<li><a href="#20" >Ask the horned owl the same question</a>.</li>
 <li><a href="#23" >Ask both owls a new question</a>.</li>
 </ul>
 
 </div><div id="19">
-<p>It doesn’t take long to get to Illnoor. Froma distance you can see the Great Zoonies and they look harmless. They’re furry creatures shaped like caterpillars &mdash; only bigger.</p>
+<p>It doesn’t take long to get to Illnoor. From a distance you can see the Great Zoonies and they look harmless. They’re furry creatures shaped like caterpillars &mdash; only bigger.</p>
 <ul>
 	<li><a href="#42" >Next</a>.</li>
 </ul>
@@ -236,7 +236,7 @@ p.theend {
 </ul>
 
 </div><div id="42">
-<p>When you enter Illnoor, the Great Zoonies welcome you and invite you to a feast of raspberries. After you stuff yourself with the juicy berries, you rest in the warm sun. You explain to the GReat Zoonies why you’ve come. They tell you that the saw-whet owl always tries to steal the raspberries. &quot;If only hed ask,&quot; one says with a sigh, &quot;We’d give him all the berries he wanted.&quot;</p>
+<p>When you enter Illnoor, the Great Zoonies welcome you and invite you to a feast of raspberries. After you stuff yourself with the juicy berries, you rest in the warm sun. You explain to the GReat Zoonies why you’ve come. They tell you that the saw-whet owl always tries to steal the raspberries. &quot;If only he'd ask,&quot; one says with a sigh, &quot;We’d give him all the berries he wanted.&quot;</p>
 <p>You decide to stay with the Great Zoonies. From time to time you miss Sally and your family. And you wonder if the saw-whet owl is still waiting for you. But you no longer need the owl’s wisdom. Now you know that your future will be a happy life in Illnoor!</p>
 <p class="theend">The End</p>
 
@@ -269,7 +269,7 @@ p.theend {
 <p>You look at what Sally has given you. It’s a long gold bar and carved into it are the words:</p>
 <p>ADMIT 2 TO THE KINGDOM OF GOLLOP.</p>
 <p>&quot;The Kingdom of Gollop,&quot; you say. &quot;That’s a secret kingdom. One of the owls told me about it when I found the owl tree.&quot;</p>
-<p>Ten you look up. The barn owl is circling over your heads. &quot;Come on, owl!&quot; you shout. &quot;Lead the way to Gollop!&quot;</p>
+<p>Then you look up. The barn owl is circling over your heads. &quot;Come on, owl!&quot; you shout. &quot;Lead the way to Gollop!&quot;</p>
 <p class="theend">The End</p>
 
 </div><div id="47">
