Add link to table.

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ p.theend {
 <p class="theend">The End</p>
 </div>
 
-<a href="graph.png">Graph</a>
+<a href="graph.png">Graph</a> |  <a href="table.html">Table</a>
 
 	<script>
 var cstate = { location: window.location.hash };
