--- a/skull-rock.html
+++ b/skull-rock.html
@@ -52,6 +52,7 @@ p.theend {
 <ul>
 	<li><a href="#6" >Summon the sea witch</a>.</li>
 	<li><a href="#26" >Find the pirate</a>.</li>
+	<li><a href="#29" >Destroy the tooth</a>.</li>
 </ul>
 
 </div><div id="6">
