--- a/skull-rock.html
+++ b/skull-rock.html
@@ -21,6 +21,7 @@ p.theend {
 
   	<h1>Skull Rock</h1>
 <div id="1">
+	<img src="sr-01.jpg"></img>
 	<p>There is a monster pirate.</p>
 <ul>
 	<li><a href="#2" >Next</a>.</li>
@@ -34,6 +35,7 @@ p.theend {
 </ul>
 
 </div><div id="3">
+	<img src="sr-03.jpg"></img>
 	<p>You escape captivity.</p>
 <ul>
 	<li><a href="#28" >Steal the diamond tooth</a>.</li>
@@ -41,6 +43,7 @@ p.theend {
 </ul>
 
 </div><div id="4">
+	<img src="sr-04.jpg"></img>
 	<p>Kill the demon octopus with a giant anchor.</p>
 <ul>
 	<li><a href="#5" >Steal the diamond tooth</a>.</li>
@@ -48,6 +51,7 @@ p.theend {
 </ul>
 
 </div><div id="5">
+	<img src="sr-05.jpg"></img>
 	<p>Learn the pirate's tragic tale.</p>
 <ul>
 	<li><a href="#6" >Summon the sea witch</a>.</li>
@@ -70,22 +74,27 @@ p.theend {
 </ul>
 
 </div><div id="26">
+	<img src="sr-04.jpg"></img>
 	<p>The pirate kills you.</p>
 <p class="theend">The End</p>
 
 </div><div id="27">
+	<img src="sr-01.jpg"></img>
 	<p>You take the pirate's place in the curse.</p>
 <p class="theend">The End</p>
 
 </div><div id="28">
+	<img src="sr-28.jpg"></img>
 	<p>The demon octopus turns you into a thrall.</p>
 <p class="theend">The End</p>
 
 </div><div id="29">
+	<img src="sr-30.jpg"></img>
 	<p>You destroy the pirate, consigning him to the sea witch.</p>
 <p class="theend">The End</p>
 
 </div><div id="30">
+	<img src="sr-30.jpg"></img>
 	<p>You free the pirate from his curse.</p>
 <p class="theend">The End</p>
 
