--- a/skull-rock.html
+++ b/skull-rock.html
@@ -37,13 +37,13 @@ p.theend {
 </div><div id="2">
 	<p>You encounter the pirate.</p>
 <ul>
-	<li><a href="#26" >Fight</a>.</li>
+	<li><a href="#12" >Fight</a>.</li>
 	<li><a href="#3" >Lay low</a>.</li>
 </ul>
 
 </div><div id="3">
 	<img src="sr-03.jpg"></img>
-	<p>You escape captivity.</p>
+	<p>You are rescued by Alice and Isaac.</p>
 <ul>
 	<li><a href="#28" >Steal the diamond tooth</a>.</li>
 	<li><a href="#4" >Hide and observe</a>.</li>
@@ -76,7 +76,7 @@ p.theend {
 </div><div id="7">
 	<p>Sheila Nageira returns.</p>
 <ul>
-	<li><a href="#30" >Sacrifice yourself</a>.</li>
+	<li><a href="#10" >Sacrifice yourself</a>.</li>
 <li><a href="#29" >Destroy the tooth</a>.</li>
 </ul>
 </div><div id="8">
@@ -89,12 +89,43 @@ p.theend {
 <ul>
 	<li><a href="#11" >Next</a>.</li>
 </ul>
+
+</div><div id="10">
+	<p>You free the pirate from his curse.</p>
+	<ul>
+	<li><a href="#13" >Next</a>.</li>
+	</ul>
+
 </div><div id="11">
 	<p>The sea witch tempts you away.</p>
 <ul>
 	<li><a href="#25" >Succumb</a>.</li>
 	<li><a href="#2" >Resist</a>.</li>
 </ul>
+
+</div><div id="12">
+	<p>Fight a thrall and get captured.</p>
+<ul>
+	<li><a href="#3" >Next</a>.</li>
+</ul>
+
+</div><div id="13">
+	<p>Outsmart the sea witch.</p>
+<ul>
+	<li><a href="#14" >Next</a>.</li>
+</ul>
+
+</div><div id="14">
+	<img src="sr-30.jpg"></img>
+	<p>Take the dinghy.</p>
+	<ul>
+	<li><a href="#15" >Next</a>.</li>
+	</ul>
+
+</div><div id="15">
+	<p>Return to the ordinary world with the missing children.</p>
+<p class="theend">The End</p>
+
 
 </div><div id="25">
 	<p>Your family and community suffers.</p>
@@ -121,10 +152,6 @@ p.theend {
 	<p>You destroy the pirate, consigning him to the sea witch.</p>
 <p class="theend">The End</p>
 
-</div><div id="30">
-	<img src="sr-30.jpg"></img>
-	<p>You free the pirate from his curse.</p>
-<p class="theend">The End</p>
 
 </div>
 
